--- a/netflix.html
+++ b/netflix.html
@@ -13,7 +13,7 @@
         <nav>
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">TV Shows</a></li>
+                <li><a href="tv show.html">TV Shows</a></li>
                 <li><a href="#">Movies</a></li>
                 <li><a href="#">New & Popular</a></li>
                 <li><a href="#">My List</a></li>
